do: fix pylint warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.black]
-line-length=119
+line-length = 119
 
 [tool.flake8]
 max-line-length = 119
@@ -9,4 +9,11 @@ ignore = ["E203"]
 max-line-length = 119
 
 [tool.pylint.design]
-max-args = 10  # Maximum number of arguments for a func
+max-args = 10  # Maximum number of arguments for a function
+
+[tool.pylint.messages_control]
+disable = [
+    "logging-fstring-interpolation",  # Ignore logging f-string interpolation warnings
+    "too-many-positional-arguments",  # Disable positional arguments limit warning
+    "broad-exception-caught" # Disable board exception warnings
+]
