--- a/.github/workflows/code_ci.yml
+++ b/.github/workflows/code_ci.yml
@@ -7,80 +7,76 @@ on:
   pull_request:
     branches:
       - master
+
 env:
   ENV_FILE: .env
+
 jobs:
-  common:
-    name: Load Environment Variables
+  env-vars:
+    name: Get Environment Variables
     runs-on: ubuntu-latest
     outputs:
       python-version: ${{ steps.load-env.outputs.python-version }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
       - name: Load Environment Variables
         id: load-env
         run: |
           set -a
-          [ -f ${{ env.ENV_FILE }}] && source ${{ env.ENV_FILE }}
+          [ -f ${{ env.ENV_FILE }} ] && source ${{ env.ENV_FILE }}
           echo "::set-output name=python-version::$PYTHON_VERSION"
-  lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
-    needs: common
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
 
+  env-setup:
+    name: Setup Python and Install Dependencies
+    runs-on: ubuntu-latest
+    needs: env-vars
+    steps:
       - name: Set up Python
+        id: setup-python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ needs.common.outputs.python-version }}
+          python-version: ${{ needs.env-vars.outputs.python-version }}
 
-      - name: Install Dependencies
-        run: |
-          pip install flake8
+      - name: Cache Python Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-      - name: Run Linter
+      - name: Install Development Dependencies
+        run: pip install -r requirements.dev.txt
+
+  lint:
+    name: Lint Code (Light with flake8)
+    runs-on: ubuntu-latest
+    needs: env-setup
+    steps:
+      - name: Run Flake8
         run: flake8 .
 
   security:
     name: Security Check
-
     runs-on: ubuntu-latest
+    needs: env-setup
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Install Bandit
-        run: pip install bandit
-
       - name: Run Bandit Security Check
         run: bandit -r .
 
   quality:
     name: Code Quality
     runs-on: ubuntu-latest
-    needs: common
+    needs: env-setup
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ needs.common.outputs.python-version }}
-
-      - name: Install Quality Tools
-        run: |
-          pip install pylint black pydocstyle
-
       - name: Run Pylint
-        run: pylint **/*.py
+        run: pylint .
 
       - name: Check Black Formatting
         run: black --check .
 
       - name: Check Pydocstyle
-        run: pydocstyle . || echo "Pydocstyle warnings detected. Please review. Run `pydocstyle .` at the root of the project."
+        run: pydocstyle .
         continue-on-error: true # Non-blocking
