--- a/.github/workflows/code_ci.yml
+++ b/.github/workflows/code_ci.yml
@@ -33,28 +33,51 @@ jobs:
     runs-on: ubuntu-latest
     needs: env-vars
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
       - name: Set up Python
         id: setup-python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ needs.env-vars.outputs.python-version }}
 
-      - name: Cache Python Dependencies
+      - name: Create Python Dev-tools Dependencies Cache
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          key: ${{ runner.os }}-pip-dev-tools-dev-tools-${{ hashFiles('requirements.dev.txt') }}
 
       - name: Install Development Dependencies
         run: pip install -r requirements.dev.txt
 
+      - name: Create Python prod-libs Dependencies Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-prod-libs-${{ hashFiles('requirements.txt') }}
+
+      - name: Install Prod Dependencies
+        run: pip install -r requirements.txt
+
   lint:
-    name: Lint Code (Light with flake8)
+    name: Flake8 linting
     runs-on: ubuntu-latest
     needs: env-setup
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Restore Python Dev-tools Dependencies Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-dev-tools-${{ hashFiles('requirements.dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-dev-tools-
+      - name: Install Flake8
+        run: pip install flake8 flake8-pyproject
+
       - name: Run Flake8
         run: flake8 .
 
@@ -63,6 +86,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: env-setup
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Restore Python Dev-tools Dependencies Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-dev-tools-${{ hashFiles('requirements.dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-dev-tools-
+      - name: Install Bandit
+        run: pip install bandit
+
       - name: Run Bandit Security Check
         run: bandit -r .
 
@@ -71,7 +107,32 @@ jobs:
     runs-on: ubuntu-latest
     needs: env-setup
     steps:
-      - name: Run Pylint
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Restore Python Dev-tools Dependencies Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-dev-tools-${{ hashFiles('requirements.dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-dev-tools-
+
+      - name: Restore Python Prod Dependencies Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-prod-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-prod-
+
+      - name: Install Pylint, Black & Pydocstyle
+        run: pip install pylint black pydocstyle
+
+      - name: Install Prod libs
+        run: pip install -r requirements.txt
+
+      - name: Pylint linting
         run: pylint .
 
       - name: Check Black Formatting
