--- a/.github/workflows/code_ci.yml
+++ b/.github/workflows/code_ci.yml
@@ -41,25 +41,20 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ needs.env-vars.outputs.python-version }}
+      - name: Create Non-root User
+        run: |
+          useradd -ms /bin/bash pyrunner
+          mkdir -p /home/pyrunner/.cache/pip
+          chown -R pyrunner:pyrunner /home/pyrunner
+          chmod -R 700 /home/pyrunner/.cache/pip
 
-      - name: Create Python Dev-tools Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-dev-tools-dev-tools-${{ hashFiles('requirements.dev.txt') }}
-
-      - name: Install Development Dependencies
-        run: pip install -r requirements.dev.txt
-
-      - name: Create Python prod-libs Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-prod-libs-${{ hashFiles('requirements.txt') }}
-
-      - name: Install Prod Dependencies
-        run: pip install -r requirements.txt
-
+      - name: Install Python Dependencies
+        run: |
+          sudo -u pyrunner bash -c "
+          python -m venv /home/pyrunner/venv &&
+          source /home/pyrunner/venv/bin/activate &&
+          pip install --upgrade pip &&
+          pip install -r requirements.txt
   lint:
     name: Flake8 linting
     runs-on: ubuntu-latest
