--- a/.github/workflows/code_ci.yml
+++ b/.github/workflows/code_ci.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ needs.env-vars.outputs.python-version }}
+
       - name: Create Non-root User
         run: |
           useradd -ms /bin/bash pyrunner
@@ -55,6 +56,14 @@ jobs:
           source /home/pyrunner/venv/bin/activate &&
           pip install --upgrade pip &&
           pip install -r requirements.txt
+          "
+
+      - name: Save Python Environment Cache
+        uses: actions/cache@v3
+        with:
+          path: /home/pyrunner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
+
   lint:
     name: Flake8 linting
     runs-on: ubuntu-latest
@@ -63,18 +72,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Restore Python Dev-tools Dependencies Cache
+      - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-dev-tools-${{ hashFiles('requirements.dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-dev-tools-
-      - name: Install Flake8
-        run: pip install flake8 flake8-pyproject
+          path: /home/pyrunner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
 
       - name: Run Flake8
-        run: flake8 .
+        run: |
+          source /home/pyrunner/venv/bin/activate
+          flake8 .
 
   security:
     name: Security Check
@@ -84,18 +91,16 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Restore Python Dev-tools Dependencies Cache
+      - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-dev-tools-${{ hashFiles('requirements.dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-dev-tools-
-      - name: Install Bandit
-        run: pip install bandit
+          path: /home/pyrunner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
 
       - name: Run Bandit Security Check
-        run: bandit -r .
+        run: |
+          source /home/pyrunner/venv/bin/activate
+          bandit -r .
 
   quality:
     name: Code Quality
@@ -105,34 +110,24 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Restore Python Dev-tools Dependencies Cache
+      - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-dev-tools-${{ hashFiles('requirements.dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-dev-tools-
+          path: /home/pyrunner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
 
-      - name: Restore Python Prod Dependencies Cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-prod-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-prod-
-
-      - name: Install Pylint, Black & Pydocstyle
-        run: pip install pylint black pydocstyle
-
-      - name: Install Prod libs
-        run: pip install -r requirements.txt
-
-      - name: Pylint linting
-        run: pylint .
+      - name: Run Pylint
+        run: |
+          source /home/pyrunner/venv/bin/activate
+          pylint .
 
       - name: Check Black Formatting
-        run: black --check .
+        run: |
+          source /home/pyrunner/venv/bin/activate
+          black --check .
 
       - name: Check Pydocstyle
-        run: pydocstyle .
-        continue-on-error: true # Non-blocking
+        run: |
+          source /home/pyrunner/venv/bin/activate
+          pydocstyle .
+        continue-on-error: true  # Non-blocking
