--- a/.github/workflows/code_ci.yml
+++ b/.github/workflows/code_ci.yml
@@ -16,51 +16,73 @@ jobs:
     name: Get Environment Variables
     runs-on: ubuntu-latest
     outputs:
-      python-version: ${{ steps.load-env.outputs.python-version }}
+      python-version: ${{ steps.load-internal-env.outputs.python-version }}
+      github-actions: ${{steps.load-external-env.outputs.github-actions}}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Load Environment Variables
-        id: load-env
+      - name: Load Project's Internal Environment Variables
+        id: load-internal-env
         run: |
-          set -a
+          set -x
           [ -f ${{ env.ENV_FILE }} ] && source ${{ env.ENV_FILE }}
-          echo "::set-output name=python-version::$PYTHON_VERSION"
+          echo "python-version=$PYTHON_VERSION" >> $GITHUB_OUTPUT
+      - name: Load External Environment Variables
+        id: load-external-env
+        run: |
+          set -x 
+          if [ "$GITHUB_ACTIONS" = "true" ]; then
+            echo "github-actions=$GITHUB_ACTIONS" >> $GITHUB_OUTPUT
+          else
+            echo "github-actions=false" >> $GITHUB_OUTPUT
+          fi
 
   env-setup:
     name: Setup Python and Install Dependencies
     runs-on: ubuntu-latest
     needs: env-vars
-    container: # Use a  python pre-installed container instead of ubuntu-latest directly
-      image: python:${{ needs.env-vars.outputs.python-version }}-slim
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-      # Install becessary system dependencues on python-slim container
-      - name: Install sudo
-        run: |
-          apt-get update && apt-get install -y sudo
-      - name: Install Node
-        run: |
-          apt-get update && apt-get install -y nodejs
-      - name: Create Non-root User
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ needs.env-vars.outputs.python-version }}
+      - name: Create Non-root User & Install dependencies # This step does not run on github actions
+        if: ${{ needs.env-vars.outputs.github-actions == 'false' }}
         run: |
           useradd -ms /bin/bash pyrunner
           mkdir -p /home/pyrunner/.cache/pip
           chown -R pyrunner:pyrunner /home/pyrunner
           chmod -R 700 /home/pyrunner/.cache/pip
 
-      - name: Install Python Dependencies
-        run: |
           sudo -u pyrunner bash -c "
           python -m venv /home/pyrunner/venv &&
           source /home/pyrunner/venv/bin/activate &&
           pip install --upgrade pip &&
           pip install -r requirements.txt
           "
-
+      - name: Install Python Dependencies
+        if: ${{ needs.env-vars.outputs.github-actions == 'true' }}
+        run: |
+          python -m venv ~/venv &&
+          source ~/venv/bin/activate &&
+          pip install --upgrade pip &&
+          pip install -r requirements.txt
+      - name: Verify Python Version
+        run: |
+          source ~/venv/bin/activate
+          ACTUAL_VERSION=$(python --version 2>&1 | sed 's/Python //')
+          EXPECTED_VERSION="${{ needs.env-vars.outputs.python-version }}"
+          echo "Actual: $ACTUAL_VERSION"
+          echo "Expected: $EXPECTED_VERSION"
+      
+          if [ "$ACTUAL_VERSION" != "$EXPECTED_VERSION" ]; then
+            echo "ERROR: Python version mismatch: expected $EXPECTED_VERSION, got $ACTUAL_VERSION"
+            exit 1
+          fi
       - name: Save Python Environment Cache
         uses: actions/cache@v3
         with:
