do: update global .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PYTHON_VERSION=3.12.8
+GCP_PROJECT_ID=dataops-forge
+BUILD_AND_RELEASE_SERVICE_ACCOUNT_NAME=bob-the-builder-releaser
+REGION=europe-west9
