--- a/.github/workflows/general_ci.yml
+++ b/.github/workflows/general_ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       python-version: ${{ steps.load-internal-env.outputs.python-version }}
-      github-actions: ${{steps.load-external-env.outputs.github-actions}}
+      github-actions: ${{ steps.load-external-env.outputs.github-actions }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -25,71 +25,105 @@ jobs:
           set -x
           [ -f ${{ env.ENV_FILE }} ] && source ${{ env.ENV_FILE }}
           echo "python-version=$PYTHON_VERSION" >> $GITHUB_OUTPUT
+
       - name: Load External Environment Variables
         id: load-external-env
         run: |
-          set -x 
+          set -x
           if [ "$GITHUB_ACTIONS" = "true" ]; then
             echo "github-actions=$GITHUB_ACTIONS" >> $GITHUB_OUTPUT
           else
             echo "github-actions=false" >> $GITHUB_OUTPUT
           fi
 
-  env-setup:
-    name: Setup Python and Install Dependencies
+  compile-requirements:
+    name: Compile Engine and Service Requirements
     runs-on: ubuntu-latest
     needs: env-vars
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ needs.env-vars.outputs.python-version }}
-      - name: Create Non-root User & Install dependencies # This step does not run on github actions
+
+  env-setup:
+    name: Setup Python and Install Dependencies
+    runs-on: ubuntu-latest
+    needs: [env-vars]
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ needs.env-vars.outputs.python-version }}
+
+      - name: Create Non-root User, Compile and Install Dependencies
         if: ${{ needs.env-vars.outputs.github-actions == 'false' }}
         run: |
-          useradd -ms /bin/bash pyrunner
-          mkdir -p /home/pyrunner/.cache/pip
-          chown -R pyrunner:pyrunner /home/pyrunner
-          chmod -R 700 /home/pyrunner/.cache/pip
+          useradd -ms /bin/bash runner
+          mkdir -p /home/runner/.cache/pip
+          chown -R runner:runner /home/runner
+          chmod -R 700 /home/runner/.cache/pip
 
-          sudo -u pyrunner bash -c "
-          python -m venv ~/venv &&
-          source ~/venv/bin/activate &&
-          pip install --upgrade pip &&
-          pip install -r requirements.txt
+          sudo -u runner bash -c "
+          python -m venv /home/runner/venv &&
+          source /home/runner/venv/bin/activate &&
+          pip install --upgrade pip pip-tools &&
+
+          pip-compile --no-strip-extras requirements.ci.in -o requirements.ci.txt &&
+          pip-compile --no-strip-extras engine/requirements.engine.in -o engine/requirements.engine.txt &&
+          find services -name "requirements.in" -exec pip-compile --no-strip-extras {} + &&
+          find services -name "requirements.txt" -exec cat {} + > services/requirements.all_services.txt &&
+
+          pip install -r requirements.ci.txt &&
+          pip install -r engine/requirements.engine.txt &&
+          pip install -r services/requirements.all_services.txt
           "
-      - name: Install Python Dependencies
+
+      - name: Compile and Install Python Dependencies
         if: ${{ needs.env-vars.outputs.github-actions == 'true' }}
         run: |
-          python -m venv ~/venv &&
-          source ~/venv/bin/activate &&
-          pip install --upgrade pip &&
-          pip install -r requirements.txt
+          python -m venv /home/runner/venv &&
+          source /home/runner/venv/bin/activate &&
+          pip install --upgrade pip pip-tools &&
+
+          pip-compile --no-strip-extras requirements.ci.in -o requirements.ci.txt &&
+          pip-compile --no-strip-extras engine/requirements.engine.in -o engine/requirements.engine.txt &&
+          find services -name "requirements.in" -exec pip-compile --no-strip-extras {} + &&
+          find services -name "requirements.txt" -exec cat {} + > services/requirements.all_services.txt &&
+
+          pip install -r requirements.ci.txt &&
+          pip install -r engine/requirements.engine.txt &&
+          pip install -r services/requirements.all_services.txt
+
       - name: Verify Python Version
         run: |
-          source ~/venv/bin/activate
+          source /home/runner/venv/bin/activate
           ACTUAL_VERSION=$(python --version 2>&1 | sed 's/Python //')
           EXPECTED_VERSION="${{ needs.env-vars.outputs.python-version }}"
           echo "Actual: $ACTUAL_VERSION"
           echo "Expected: $EXPECTED_VERSION"
-      
+
           if [ "$ACTUAL_VERSION" != "$EXPECTED_VERSION" ]; then
             echo "ERROR: Python version mismatch: expected $EXPECTED_VERSION, got $ACTUAL_VERSION"
             exit 1
           fi
+
       - name: Save Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: ~/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
+          path: /home/runner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt', 'engine/requirements.engine.txt', 'services/requirements.all_services.txt') }}
 
   lint:
-    name: Flake8 linting
+    name: Flake8 Linting
     runs-on: ubuntu-latest
-    needs: env-setup
+    needs: [env-setup]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -97,18 +131,18 @@ jobs:
       - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: ~/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
+          path: /home/runner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt') }}
 
       - name: Run Flake8
         run: |
-          source ~/venv/bin/activate
+          source /home/runner/venv/bin/activate
           flake8 .
 
   security:
     name: Security Check
     runs-on: ubuntu-latest
-    needs: env-setup
+    needs: [env-setup]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -116,12 +150,12 @@ jobs:
       - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: ~/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
+          path: /home/runner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt', 'engine/requirements.engine.txt', 'services/requirements.all_services.txt') }}
 
       - name: Run Bandit Security Check
         run: |
-          source ~/venv/bin/activate
+          source /home/runner/venv/bin/activate
           bandit -r .
 
   quality:
@@ -135,21 +169,21 @@ jobs:
       - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: ~/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.txt') }}
+          path: /home/runner/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt') }}
 
       - name: Run Pylint
         run: |
-          source ~/venv/bin/activate
+          source /home/runner/venv/bin/activate
           pylint .
 
       - name: Check Black Formatting
         run: |
-          source ~/venv/bin/activate
+          source /home/runner/venv/bin/activate
           black --check .
 
       - name: Check Pydocstyle
         run: |
-          source ~/venv/bin/activate
+          source /home/runner/venv/bin/activate
           pydocstyle .
         continue-on-error: true # Non-blocking
