--- a/.github/workflows/general_ci.yml
+++ b/.github/workflows/general_ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       python-version: ${{ steps.load-internal-env.outputs.python-version }}
-      github-actions: ${{ steps.load-external-env.outputs.github-actions }}
+      github-actions: ${{steps.load-external-env.outputs.github-actions}}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -25,81 +25,75 @@ jobs:
           set -x
           [ -f ${{ env.ENV_FILE }} ] && source ${{ env.ENV_FILE }}
           echo "python-version=$PYTHON_VERSION" >> $GITHUB_OUTPUT
-
       - name: Load External Environment Variables
         id: load-external-env
         run: |
-          set -x
+          set -x 
           if [ "$GITHUB_ACTIONS" = "true" ]; then
             echo "github-actions=$GITHUB_ACTIONS" >> $GITHUB_OUTPUT
           else
             echo "github-actions=false" >> $GITHUB_OUTPUT
           fi
 
-  compile-requirements:
-    name: Compile Engine and Service Requirements
-    runs-on: ubuntu-latest
-    needs: env-vars
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ needs.env-vars.outputs.python-version }}
-
   env-setup:
     name: Setup Python and Install Dependencies
     runs-on: ubuntu-latest
-    needs: [env-vars]
+    needs: env-vars
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ needs.env-vars.outputs.python-version }}
-
-      - name: Compile and Install Python Dependencies
+      - name: Create Non-root User & Install dependencies # This step does not run on github actions
+        if: ${{ needs.env-vars.outputs.github-actions == 'false' }}
         run: |
-          python -m venv $GITHUB_WORKSPACE/venv &&
-          source $GITHUB_WORKSPACE/venv/bin/activate &&
-          pip install --upgrade pip pip-tools &&
+          useradd -ms /bin/bash pyrunner
+          mkdir -p /home/pyrunner/.cache/pip
+          chown -R pyrunner:pyrunner /home/pyrunner
+          chmod -R 700 /home/pyrunner/.cache/pip
 
-          pip-compile --no-strip-extras requirements.ci.in -o requirements.ci.txt &&
-          pip-compile --no-strip-extras engine/requirements.engine.in -o engine/requirements.engine.txt &&
-          find services -name "requirements.in" -exec pip-compile --no-strip-extras {} + &&
-          find services -name "requirements.txt" -exec cat {} + > services/requirements.all_services.txt &&
-
+          sudo -u pyrunner bash -c "
+          python -m venv ~/venv &&
+          source ~/venv/bin/activate &&
+          pip install --upgrade pip &&
           pip install -r requirements.ci.txt &&
           pip install -r engine/requirements.engine.txt &&
           pip install -r services/requirements.all_services.txt
-
+          "
+      - name: Install Python Dependencies
+        if: ${{ needs.env-vars.outputs.github-actions == 'true' }}
+        run: |
+          python -m venv ~/venv &&
+          source ~/venv/bin/activate &&
+          pip install --upgrade pip &&
+          pip install -r requirements.ci.txt &&
+          pip install -r engine/requirements.engine.txt &&
+          pip install -r services/requirements.all_services.txt
       - name: Verify Python Version
         run: |
-          source $GITHUB_WORKSPACE/venv/bin/activate
+          source ~/venv/bin/activate
           ACTUAL_VERSION=$(python --version 2>&1 | sed 's/Python //')
           EXPECTED_VERSION="${{ needs.env-vars.outputs.python-version }}"
           echo "Actual: $ACTUAL_VERSION"
           echo "Expected: $EXPECTED_VERSION"
-
+      
           if [ "$ACTUAL_VERSION" != "$EXPECTED_VERSION" ]; then
             echo "ERROR: Python version mismatch: expected $EXPECTED_VERSION, got $ACTUAL_VERSION"
             exit 1
           fi
-
       - name: Save Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: $GITHUB_WORKSPACE/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt', 'engine/requirements.engine.txt', 'services/requirements.all_services.txt') }}
+          path: ~/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt','engine/requirements.engine.txt','services/requirements.all_services.txt') }}
 
   lint:
-    name: Flake8 Linting
+    name: Flake8 linting
     runs-on: ubuntu-latest
-    needs: [env-setup]
+    needs: env-setup
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -107,24 +101,18 @@ jobs:
       - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: $GITHUB_WORKSPACE/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt', 'engine/requirements.engine.txt', 'services/requirements.all_services.txt') }}
-
-      - name: Debug Virtual Environment
-        run: |
-          echo "Debugging virtual environment"
-          ls -l $GITHUB_WORKSPACE
-          ls -l $GITHUB_WORKSPACE/venv
+          path: ~/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt','engine/requirements.engine.txt','services/requirements.all_services.txt') }}
 
       - name: Run Flake8
         run: |
-          source $GITHUB_WORKSPACE/venv/bin/activate
+          source ~/venv/bin/activate
           flake8 .
 
   security:
     name: Security Check
     runs-on: ubuntu-latest
-    needs: [env-setup]
+    needs: env-setup
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -132,12 +120,12 @@ jobs:
       - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: $GITHUB_WORKSPACE/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt', 'engine/requirements.engine.txt', 'services/requirements.all_services.txt') }}
+          path: ~/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt','engine/requirements.engine.txt','services/requirements.all_services.txt') }}
 
       - name: Run Bandit Security Check
         run: |
-          source $GITHUB_WORKSPACE/venv/bin/activate
+          source ~/venv/bin/activate
           bandit -r .
 
   quality:
@@ -151,21 +139,21 @@ jobs:
       - name: Restore Python Environment Cache
         uses: actions/cache@v3
         with:
-          path: $GITHUB_WORKSPACE/venv
-          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt', 'engine/requirements.engine.txt', 'services/requirements.all_services.txt') }}
+          path: ~/venv
+          key: ${{ runner.os }}-python-venv-${{ hashFiles('requirements.ci.txt','engine/requirements.engine.txt','services/requirements.all_services.txt') }}
 
       - name: Run Pylint
         run: |
-          source $GITHUB_WORKSPACE/venv/bin/activate
+          source ~/venv/bin/activate
           pylint .
 
       - name: Check Black Formatting
         run: |
-          source $GITHUB_WORKSPACE/venv/bin/activate
+          source ~/venv/bin/activate
           black --check .
 
       - name: Check Pydocstyle
         run: |
-          source $GITHUB_WORKSPACE/venv/bin/activate
+          source ~/venv/bin/activate
           pydocstyle .
         continue-on-error: true # Non-blocking
