--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PYTHON_VERSION=3.12.8
 GCP_PROJECT_ID=dataops-forge
 BUILD_AND_RELEASE_SERVICE_ACCOUNT_NAME=bob-the-builder-releaser
 REGION=europe-west9
+PYTHONPATH=$PYTHONPATH:./engine
