--- a/.github/workflows/general_ci.yml
+++ b/.github/workflows/general_ci.yml
@@ -145,7 +145,7 @@ jobs:
       - name: Run Pylint
         run: |
           source ~/venv/bin/activate
-          pylint .
+          pylint engine services tests
 
       - name: Check Black Formatting
         run: |
