--- a/.github/workflows/general_ci.yml
+++ b/.github/workflows/general_ci.yml
@@ -58,7 +58,7 @@ jobs:
           sudo -u pyrunner bash -c "
           python -m venv ~/venv &&
           source ~/venv/bin/activate &&
-          pip install --upgrade pip &&
+          pip install -U pip setuptools &&
           pip install -r requirements.ci.txt &&
           pip install -r engine/requirements.engine.txt &&
           pip install -r services/requirements.all_services.txt
@@ -68,7 +68,7 @@ jobs:
         run: |
           python -m venv ~/venv &&
           source ~/venv/bin/activate &&
-          pip install --upgrade pip &&
+          pip install -U pip setuptools &&
           pip install -r requirements.ci.txt &&
           pip install -r engine/requirements.engine.txt &&
           pip install -r services/requirements.all_services.txt
